name: ohammer
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: GPL
license-file: ""
maintainer: Sergey Kishchenko
stability: alpha
homepage: http://tilarids.blogspot.com
description: It's a MS Office binary documents viewer (editor features would be added in future I hope)
author: Sergey Kishchenko
data-dir: ""
extra-source-files: OLEStorage.hs
                    PPTStream.hs
                    XMLPickle.hs
		    DataSpaces.hs
 
executable ohammer
    build-depends: array -any, base >=4, binary -any, bytestring -any,
                   cmdargs -any, filepath -any, hxt -any, utf8-string
    main-is: Main.hs
    buildable: True
    hs-source-dirs: .
    other-modules: XMLPickle OLEStorage PPTStream